# windows-hack

./: .gitignore  CMakeLists.txt  LICENSE  README.md
notes/: RDI_and_sRDI.md
reflectiveDLLInjection/: CMakeLists.txt  ReflectiveDLLInjection.c  ReflectiveDLLInjection.cpp  ReflectiveDLLInjection.h  entry.cpp
utils/: CMakeLists.txt  Process.c  Process.cpp  Process.h  Process_test.cpp
